# The_Lambda_Matrix

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  Examples1.cpp  Examples2.cpp  Examples3.cpp  Examples4.cpp
libs/: CMakeLists.txt
libs/TLM/: CMakeLists.txt
libs/TLM/src/: Matrix.cpp  Rational.cpp
libs/TLM/test/: CMakeLists.txt  TLM_Tests.cpp
src/: main.cpp
src/matrix/: CMakeLists.txt
src/matrix/include/: Matrix.hpp
src/rational/: CMakeLists.txt  Rational.cpp
src/rational/include/: Rational.hpp
tests/: CMakeLists.txt  MatrixTest.cpp  RationalTest.cpp
